[tool.poetry]
name = "cipher_pbp2113"
version = "0.1.0"
description = "Test package for cipher function for HW7 MDS Fall 2020"
authors = ["Paul Platzman <pbp2113@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
codecov = "^2.1.10"
python-semantic-release = "^7.3.0"
flake8 = "^3.8.4"
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
